--- a/index.html
+++ b/index.html
@@ -5,5 +5,30 @@
     <title>Companies Table</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body class="background">
+    <header>
+      <h1>companies income</h1>
+    </header>
+    <section>
+      <table id="table">
+        <thead>
+          <th>id</th>
+          <th>name</th>
+          <th>city</th>
+          <th>total income</th>
+        </thead>
+        <tbody id="table-rows">
+          <td>Loading</td>
+        </tbody>
+        <!-- table here -->
+      </table>
+    </section>
+    <footer>
+      <nav class="pagination">
+        1 2 3 4 5 ...
+        <!-- pagination here -->
+      </nav>
+    </footer>
+  </body>
 </html>
+<script src="index.js"></script>
