--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <header>
       <h1>companies income</h1>
     </header>
+    <nav id="nav">
+      <input type="text" id="input" placeholder="filter by name" value=""></input>
+      
+    </nav>
     <section>
       <table id="table">
         <thead>
@@ -24,10 +28,10 @@
       </table>
     </section>
     <footer>
-      <nav class="pagination">
+      <div class="pagination">
         1 2 3 4 5 ...
         <!-- pagination here -->
-      </nav>
+      </div>
     </footer>
   </body>
 </html>
