--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         </tbody>
         <!-- table here -->
       </table>
+      <div id="modal" class="modal">
+        <div class="modal-content">
+          <span id="closeBtn" class="closeBtn">&times;</span>
+          <div id="modal-data" class="modal-data">Data to be loaded</div>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="pagination">
