created pagination and did some CSS tweaks in mediaquery

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </section>
     <footer>
-      <div class="pagination">
+      <div id="pagination">
         1 2 3 4 5 ...
         <!-- pagination here -->
       </div>
